added more tests

--- a/Stox.xcodeproj/xcshareddata/xcschemes/StoxUITests.xcscheme
+++ b/Stox.xcodeproj/xcshareddata/xcschemes/StoxUITests.xcscheme
@@ -24,6 +24,15 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "24D685AB2092E33C00A6DB35"
+            BuildableName = "Stox.app"
+            BlueprintName = "Stox"
+            ReferencedContainer = "container:Stox.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -37,6 +46,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "24D685AB2092E33C00A6DB35"
+            BuildableName = "Stox.app"
+            BlueprintName = "Stox"
+            ReferencedContainer = "container:Stox.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -46,6 +65,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "24D685AB2092E33C00A6DB35"
+            BuildableName = "Stox.app"
+            BlueprintName = "Stox"
+            ReferencedContainer = "container:Stox.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
